Release 0.6.0: Flow recovery, TCK closure, transport/HTTP refactor (#82)
* Enhance TLS benchmark setup with dynamic certificate resolution and cleanup

* Expose cross-platform POSIX / Winsock socket symbol loading via CoreSyscallLoader and outline migration plan for Community carrier

* Emit PaqsHandlerFailure event on handler failure and improve stream cleanup logic

* Enhance CoreFlowRuntime with snapshot recovery and shutdown events (#76)

* Enhance CoreFlowRuntime with snapshot-based recovery for parked flows and emit shutdown events

* Add FlowEngineShutdownEvent to emit shutdown metrics and operational snapshots

* Refactor snapshot restoration logic to support registration of parked instances

* Add test for restore-backed wake to validate parked registration consumption

* Enhance FlowEngine to emit shutdown event with final runtime statistics after closure

* Enhance parked flow lookup to suppress repeated snapshot store probes after a miss

* Implement CommunityEventProvider and enhance parked flow registration logic in tests

* Implement CommunityEventProvider and enhance parked flow registration logic in tests

* Enhance FlowEngine and related components for improved shutdown and snapshot handling

* Enhance CoreFlowRuntime to improve compensation handling and snapshot finalization during shutdown

* Reset lifecycle counters on engine restart and enhance parked instance scheduling logic

* Enhance lifecycle management in CoreFlowRuntime for improved flow instance handling and recovery

* Refactor lifecycle counter management in CoreFlowRuntime for improved decrement logic and handling on exit

* Enhance CoreFlowRuntime to improve handling of stale lifecycles and snapshot management during flow execution

* Refactor CoreFlowCarrierPinningTckTest to clarify test purpose and update documentation for carrier-thread pinning verification

* Enhance TLS setup, CoreFlowRuntime, and add TCK tests (#77)

* Add TCK tests for Community and Core subsystems, enhance S